# Snails2

./: .gitignore  ArmasFILE.cpt  BALAS.PCX  CARACOL.PCX  CMakeLists.txt  EXPLO.PCX  FON1.PCX  GAMEPAL.PCX  KEYB.C  KEYS.CFG  Keys2.cfg  LGAME2.C  LGAME2.H  PCXDECOD.C  TER1.PCX  TableroFILE.cpt  armas.pcx  comunes.h  fps_limiter.c  fps_limiter.h  fuente1.inf  fuente1.pcx  graficos.c  graficos.h  keyconfig.c  keyconfig.h  keys.cfg  lgame2.c  lgame2.h  pcxdecod.c  pcxdecod.h  snails.c  snails.h
codeblocks/: Snails2.cbp  Snails2.depend  Snails2.layout
